--- a/coffe-house/package.json
+++ b/coffe-house/package.json
@@ -20,6 +20,7 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "postcss-loader": "^7.3.3",
+    "resolve-url-loader": "^5.0.0",
     "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
